chickadee.css
/* ... */
td {
  border: 1px solid black;
  padding-left: 1em;
  padding-right: 1em;
}
dl {
  margin-left: 1em;
}
dt {
  margin-top: 0.2em;
}

a {
  text-decoration: none;
  color: #000;
}

a:hover {
  color: #fff;
  background-color: #000;
}

#main a {
  color: #224;
  border-bottom: 1px solid #889;
  font-style: italic;
}
#main a:hover {
  color: #fff;
  background-color: #002;
}

#hdr h1 {
  font-size: 1em;
  padding-left: 0.3em;
  background-color: #ffffff;
  margin-bottom: 0;
  margin-top: 0;
  float: left;
}
#hdr h5 {
  display: none;
}
#hdr {
  /* BFC set elsewhere */
  border-bottom: 3px double black;
  /* box-shadow: #bbb 0px 1px 5px;  // desired box shadow, but right overflow issues */
  -webkit-box-shadow: #bbb -3px 1px 3px;  /* moz hack to prevent right overflow */
  -moz-box-shadow: #bbb -3px 1px 3px;  /* moz hack to prevent right overflow */
  box-shadow: #bbb -3px 1px 3px;
}

h1 a {
  border: none;
  font-weight: bold;
  font-style: italic;
  padding-left: 0.2em;
  padding-right: 0.2em;
}

#main td.match-path {
  /* text-align: right; */
}

#main td.match-path a, ul.contents-list a {
  border: none;
  font-weight: normal;
  font-style: italic;
}

td.match-sig {
  padding: 0;
}
#main td.match-sig a {
  display: block;
  text-decoration: none;
  border: none;
  padding-left: 1em;
  padding-right: 1em;
  font-weight: normal;
  font-style: normal;
}
td.match-sig tt {
/*  font-size: 14px; */
}

.js #contents {
 display: none;  /* unhide later */
 margin-top: 0.5em;
}

#contents ul.contents-list {
 float: left;
 *width: 100%;        /* IE7: explicit width so float children can use % width */
}
.js #contents ul.contents-list {
 display: none;
}
#contents ul.contents-list li { 
 float: left;
 width: 25%;          /* ok for 800x600 */
 *width: 24.75%;      /* IE7: avoid width overage */
 border: none;
 border-top: 1px solid #e8e8e8;  /* longer lines need lighter value; also -bottom looks terrible */
}

.csscolumns #contents ul.contents-list {
 float: none;
 -webkit-column-width: 12em;
 -webkit-column-rule: 1px solid black;
 -webkit-column-gap: 1px; /* defeat disappearing rule */
 -moz-column-width: 12em;
 -moz-column-rule: 1px solid black;
 -moz-column-gap: 1px;  /* defeat border overlapping rule */
}
.csscolumns #contents ul.contents-list li {
 float: none;
 width: auto;
 border: none;  /* No borders for now; webkit especially has rendering problems when border wraps */
}

#contents.sidebar ul.contents-list {
 float: none;
}
.js #contents.sidebar ul.contents-list {
 display: block;  /* move this to @media? */
}
#contents.sidebar ul.contents-list li {
 float: none;
 width: auto;
 border: none;
 border-top: 1px solid #ddd;
}

ul.contents-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
  font-size: 14px;
}
ul.contents-list li {
  padding: 0;
  margin: 0;
  line-height: 1em;
}
/* ul.contents-list li:first-child { */
/*   border-top: none; */
/* } */
ul.contents-list li a {
  display: block;
  padding: 0.25em 0.5em;
  color: #000;
}
ul.contents-list li a:hover {
  color: #fff;
  background-color: #222;
}

/* Introduce a new "Block formatting context" (9.4.1) 
   for each of these block elements by setting
   overflow to anything other than visible.  This
   allows blocks to flow around floats.  Certain
   elts, such as table cells, get a BFC automatically. */
#main dl, #main ul, #main ol,
#main h1, #main h2, #main h3,
#main h4, #main h5, #main h6,
#hdr {
  overflow: hidden;
  /* Also set hasLayout in IE6 and IE7 */
  zoom: 1;
  min-height: 0;
}
/* New BFC for pre but allow horiz. scrollbar
   to appear rather than truncating content. */
#main pre {
  overflow: auto;
}
/* PRE wrapping rather than overflow. */
#main pre {
  white-space: pre-wrap; /* CSS3 */
  white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
  white-space: -pre-wrap; /* Opera 4-6 */
  white-space: -o-pre-wrap; /* Opera 7 */
  word-wrap: break-word; /* Internet Explorer 5.5+ */
}

ul li {
  margin-bottom: 3px;  /* > 0 helps avoid cutoff of bottom link border */
}

form.lookup input.text, div.incsearch {
  width: 50%;
  font-family: "Georgia", "Times New Roman", serif;
  font-size: 16px;
  border: 1px solid #888888;
  padding-left: 0.2em; padding-right: 0.2em;
/*  padding: 2px; */   /* make up for 3px border on buttons */
}
form.lookup input.text:focus {
  outline: none;
  border: 1px solid black;
}
#searchbox {
  width: 75%;
  max-width: 45em;
  margin-bottom: 1em;
  float: left;
}
form.lookup { overflow: hidden; zoom: 1; min-height: 0; }

div.buttons {
  float: left;
  margin-left: 0.5em;
  width: 5em;
}
form.lookup input.button:focus {
/*  outline: 1px solid #888888; */
  border: 1px solid black;
  outline: none;
  background-color: #f4f4f4;
}
input.button {
  font-family: "Georgia", "Times New Roman", serif;
  cursor: pointer;
}
form.lookup input.button {
  font-size: 0.875em;
/*  font-size: 16px;*/
  border: 1px solid #888888;
  background-color: #fcfcfc;
  margin-left: 0.2em;
  width: 100%; /* inside div */
  margin-bottom: 0.2em;
}

#hdr-lookup {
    float: right;
    border-left: 1px solid black;
    border-right: 1px solid black;
    margin-right: 10px;
}
#hdr-searchbox {
    padding: 0 0.2em;
    margin: 0;
    border: 0;      /* not none -- fixes border in IE6 */
    font-size: 13px;
    font-family: "Georgia", "Times New Roman", serif;
    width: 18em;
    outline: none;
    -webkit-appearance: none;
}
#hdr-searchbox-incsearch {
    font-size: 13px;
}
#hdr-submit {
/*    float: right; */
    margin: 0;
    padding: 0;
    border: 0;
    background-color: transparent;
    background-image: url('mag.png');
    background-position: center center;
    background-repeat: no-repeat;
    margin-left: 2px;
    margin-right: 3px;
/*    margin-right: 0.5em; */   /* matches left indent */
    width: 12px;
    height: 13px;
    outline: none;
/*    border: none;
    border-left: 1px solid #888888; */
}
#hdr-submit:focus {
    outline: 1px dotted #888888;
}

#navskip {
  display: none;
}
/* ... */

